<resources>
    <string name="app_name">Promosee</string>
    <string name="boarding_title_1">Get The Best Influencers!</string>
    <string name="boarding_body_1">Explore various influencers to promote your product!</string>
    <string name="boarding_title_2">Get Quality Content!</string>
    <string name="boarding_body_2">Create promotion for contents with a verified quality!</string>
    <string name="boarding_title_3">Increase Selling Engagement!</string>
    <string name="boarding_body_3">Keep track of the promotion progress for the development of your product!</string>
    <string name="continue_button_text">Continue to Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_company">Register as a Company</string>
    <string name="register_influencer">Register as an Influencer</string>
    <string name="emailhint">Enter email</string>
    <string name="password">Password</string>
    <string name="passwordhint">Enter password</string>
    <string name="no_acc">Sign up</string>
    <string name="forgetpass">Forgot Password ?</string>
    <string name="email_empty">Email can\'t be empty</string>
    <string name="pass_empty">Password can\'t be empty</string>
    <string name="loginSuccess">Login successful</string>
    <string name="loginFailed">Login Failed</string>
    <string name="company_register">Company Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_hint">Enter password again</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="categories">Categories</string>
    <string name="food">Food and Drinks</string>
    <string name="sports">Sports</string>
    <string name="health">Health</string>
    <string name="technology">Technology</string>
    <string name="choose_categories">Choose Categories</string>
    <string name="influencer_register">Influencer Register</string>
    <string name="username_empty">Username can\'t be empty</string>
    <string name="minimum_of_8_characters">Must be a minimum of 8 characters</string>
    <string name="pass_must_match">Confirmation must be the same as the password</string>
    <string name="register_failed">Register failed</string>
    <string name="account_registered">Account registered</string>
    <string name="userLogin">User Login</string>
    <string name="tvEmail">Email</string>
    <string name="loginBtn">Login</string>
    <string name="title_activity_main_com">MainCom</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="enter_company_name">Enter company name</string>
    <string name="name">Name</string>
    <string name="empty_name">Name can\'t be empty</string>
    <string name="cart">cart</string>
    <string name="views_after_appbar">Views after appbar</string>
    <string name="search_page_title">Promosee-kan ke influencer pilihanmu!</string>
    <string name="userphoto">user photo</string>
    <string name="card_name">Lee Ji Eun</string>
    <string name="follower_card">218.2K Followers</string>
    <string name="cost">500ribu - 1juta</string>
    <string name="card_book">Booking</string>
    <string name="hello_user">Hello, %s!</string>
    <string name="look_for_your_favorite_influencer">Look for your favorite influencer</string>
    <string name="dashboard">Dashboard</string>
    <string name="see_more"><![CDATA[See More >]]></string>
    <string name="new_sales">New sales</string>
    <string name="_858">858</string>
    <string name="my_order">My Order</string>
    <string name="reccomendation">Reccomendation</string>
    <string name="order_status">Order Status</string>
    <string name="december_2023">December 2023</string>
    <string name="waiting_for_confirmation">Waiting for Confirmation</string>
    <string name="done">Done</string>
    <string name="failed">Failed</string>
    <string name="processing">Processing</string>
    <string name="iu">IU</string>
    <string name="shampoo_conditioner"><![CDATA[Shampoo & Conditioner]]></string>
    <string name="waiting_for_long">Waiting for long</string>
    <string name="payment">Payment</string>
    <string name="total_payment">Total Payment</string>
    <string name="rp_100_000">Rp 100.000</string>
    <string name="pay">Pay</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="order">Order</string>
    <string name="influencer">Influencer</string>
    <string name="instragramnya_iu">\@dlwlrma</string>
    <string name="detail">Detail</string>
    <string name="order_date">Order Date</string>
    <string name="choose_a_date">Choose a Date</string>
    <string name="product_type">Product Type</string>
    <string name="enter_product_type">Enter product type</string>
    <string name="promotion_media">Promotion Media</string>
    <string name="promotion_package">Promotion Package</string>
    <string name="package_a">Package A</string>
    <string name="instagram">Instagram</string>
    <string name="product_detail">Product Detail</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="product_names">Product Name</string>
    <string name="product_link">Product Link</string>
    <string name="enter_product_link">Enter product link</string>
    <string name="sender_address">Sender Address</string>
    <string name="product_delivery">Product Delivery</string>
    <string name="enter_sender_address">Enter sender address</string>
    <string name="receiver_address">Receiver Address</string>
    <string name="enter_receiver_address">Enter receiver address</string>
    <string name="courier">Courier</string>
    <string name="choose_a_courier">Choose a courier</string>
    <string name="expired">Session Expired</string>
    <string name="influencer_name">Benhard Sim</string>
    <string name="influe_rate">Rating: 4.5</string>
    <string name="comment">Reviews</string>
    <string name="rate_card">Rate Card</string>
    <string name="product_name">Paket A</string>
    <string name="todo">- 2x Instagram Story\n- 1x Post Feed</string>
    <string name="product_price">Rp 100000</string>
    <string name="desc">"It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. "</string>
    <string name="check_acc">Order paket</string>
    <string name="productFail">product failed to fetch</string>
    <string name="no_product">No Products</string>
    <string name="don_t_have_any_account_yet">Don\'t have any account yet?</string>
    <string name="company_name">PT Sinar Jaya Abadi</string>
    <string name="review_date">15 Oct 2022</string>
    <string name="komentar">Comment</string>
    <string name="rating_title">Overall Rating</string>
    <string name="review_head">Reviews</string>
    <string name="rating">5</string>
    <string name="profile_head">Profile</string>
    <string name="email_com">benhardsim@gmail.com</string>
    <string name="telp_com">+62123333231</string>
    <string name="acc_title">Account</string>
    <string name="other_title">Other</string>
    <string name="logout">Logout</string>
    <string name="title_activity_main_influencer">MainInfluencer</string>
    <string name="email_influencer">bensim@gmail.com</string>
    <string name="telp_infuencer">+6266188108</string>
    <string name="my_product">My Product</string>
    <string name="edit">Edit</string>
    <string name="briefing">Briefing</string>
    <string name="enter_briefing_for_influencer">Enter briefing for influencer</string>
    <string name="choose_your_payment_method">Choose your payment method</string>
    <string name="product_head">Product</string>
    <string name="form_product_add">Add Product</string>
    <string name="product_name_txt">Product Name</string>
    <string name="product_desc_txt">Description</string>
    <string name="product_info">Product Information</string>
    <string name="product_todo">To Do ( seperated by coma, no space )</string>
    <string name="enter_product_description">Enter Product Description</string>
    <string name="enter_todo_list">enter todo list</string>
    <string name="choose_sosmed">Choose Sosial Media</string>
    <string name="choose_your_social_media">Choose your Social media</string>
    <string name="addprodictsuccess">Product Created successfully</string>
    <string name="productFailadd">failed to created product</string>
    <string name="price_post">Add your price</string>
    <string name="fieldEmpty">please fill all field</string>
    <string name="must_choose_a_date">Must choose a date</string>
    <string name="product_type_empty">Product type can\'t be empty</string>
    <string name="briefing_empty">Briefing must be filled</string>
    <string name="product_link_empty">Product link is required</string>
    <string name="sender_address_empty">Please fill the sender address</string>
    <string name="receiver_address_empty">Please fill the receiver address</string>
    <string name="product_name_empty">Product name is required</string>
    <string name="courier_service_empty">Must choose a courier service</string>
    <string name="payment_method_empty">Must choose a payment method</string>
    <string name="failed_to_order">Failed to order</string>
    <string name="promotion_detail">Promotion Detail</string>
    <string name="promotion">Promotion</string>
    <string name="posting_date">Posting Date</string>
    <string name="promotion_link">Promotion Link</string>
    <string name="promotion_content_hint">Enter the link to the promotion content</string>
    <string name="pending">Pending</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="beauty_and_fashion">Beauty and Fashion</string>
    <string name="gaming">Gaming</string>
    <string name="travel">Travel</string>
    <string name="casual">Casual</string>
    <string name="entertainment">Entertainment</string>
    <string name="notifications">Notifications</string>
    <string name="no_news_for_you">No news for you</string>
    <string name="update_product">Update Product</string>
    <string name="fetchFailproduct">Failed to Fetch Product data</string>
    <string name="productUpdated">Product Updated Succesfully</string>
    <string name="delete">Delete</string>
    <string name="deleteSuccess">Product Deleted Succesfully</string>
    <string name="failDelete">Product Failed to delete</string>
    <string name="add_review_head">Add Review</string>
    <string name="review_rating">Rating</string>
    <string name="review_comment">Review Comment</string>
    <string name="enter_your_comment">Enter your comment here</string>
    <string name="add_review">Add Review</string>
    <string name="company">Company</string>
    <string name="failed_to_update">Failed to update</string>
    <string name="failed_to_fetch_data">Failed to fetch data</string>
    <string name="submit">Submit</string>
    <string name="finish">Finish</string>
    <string name="Follower">Follower</string>
    <string name="tiktok">TikTok</string>
    <string name="youtube">Youtube</string>
    <string name="address">Address</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="no_influencer">No Influencer Found</string>
    <string name="reviewAdded">Review Added Successfully</string>
    <string name="reviewFail">Review Failed to Add</string>
    <string name="order_succes">Order Added Succesfully</string>
    <string name="Follower_insta">Follower : %s</string>
</resources>