<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.company.mainCompany.ui.home.HomeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/md_theme_light_onPrimary">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/home_app_bar" >

            <TextView
                android:text="@string/influencer_name"
                android:textColor="@color/cardview_dark_background"
                android:textSize="24sp"
                android:textStyle="bold"
                android:fontFamily="@font/josefinsans_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/views_after_appbar"
        android:padding="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Scrollable content -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/avatar_card"
                    android:layout_width="360dp"
                    android:layout_gravity="center"
                    android:layout_height="190dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/userphoto"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/iu" />



            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingTop="20dp"
                android:text="@string/influencer_name"/>

            <TableRow
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:textSize="12dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/influe_rate"/>

                <Button
                    android:layout_height="33dp"
                    android:text="@string/comment"
                    android:textSize="10dp"
                    />

            </TableRow>

            <TextView
                android:layout_width="match_parent"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingTop="20dp"
                android:text="@string/rate_card"/>





        </TableLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>